header svg issues fixed, tested on narrow and wide screens in chrome and safari

--- a/assets/scss/modules/header.scss
+++ b/assets/scss/modules/header.scss
@@ -52,9 +52,8 @@
     .flourish {
         position: absolute;
         top: 0;
-        width: 220px;
+        width: 210px;
         height: 100%;
-        background-position: center;
         background-size: cover;
         overflow: visible;
     }
@@ -71,42 +70,40 @@
         display: flex;
         flex-direction: column;
 
-            .image {
-                position: relative;
-                height: 300px;
-                width: 100%;
-                min-width: auto;
-            }
-
-            .container {
-                height: auto;
-            }
-
-            .content {
-                justify-content: center;
-            }
-
-            .text-wrapper {
-                width: 100%;
-                height: 100%;
-            }
-
-            .flourish {
-                width: 100%;
-                height: 200px;
-                top: 100px;
-                bottom: 50%;
-                left: 0;
-            }
-
-            .background {
-                top: auto;
-                height: auto;
-                width: 100%;
-                bottom: 0;
-                left: 0;
-            }
+        .image {
+            position: relative;
+            height: 300px;
+            width: 100%;
+            min-width: auto;
         }
+
+        .container {
+            height: auto;
+        }
+
+        .content {
+            justify-content: center;
+        }
+
+        .text-wrapper {
+            width: 100%;
+            height: 100%;
+        }
+
+        .flourish {
+            width: 100%;
+            top: 100px;
+            left: 0;
+        }
+
+        .background {
+            top: auto;
+            height: auto;
+            width: 100%;
+            bottom: 0;
+            left: 0;
+        }
+    }
 
     &.text-left {
         .image {
@@ -123,6 +120,7 @@
 
         .flourish {
             background-image: url('/img/text-left.svg');
+            background-position: left center;
             right: calc(35% + 1px);
         }
 
@@ -130,6 +128,8 @@
             .flourish {
                 background-image: url('/img/text-bottom-1.svg');
                 right: auto;
+                height: 200px;
+                top: 105px;
             }
         }
     }
@@ -149,13 +149,17 @@
 
         .flourish {
             background-image: url('/img/text-right.svg');
+            background-position: right center;
             left: calc(35% + 1px);
+
         }
 
         @include mq-below(medium) {
             .flourish {
                 background-image: url('/img/text-bottom-2.svg');
                 left: auto;
+                height: 200px;
+                top: 100px;
             }
         }
     }
